changes made to work with android